# BSplinebasis

./: .gitignore  BSplineException_8h_source.html  BSplineGenerator_8h_source.html  BilinearForm_8h_source.html  CMakeLists.txt  CompoundOperators_8h_source.html  Core_8h_source.html  Derivative_8h_source.html  Doxyfile  GenericOperators_8h_source.html  Grid_8h_source.html  LinearForm_8h_source.html  Position_8h_source.html  README.md  ScalarOperators_8h_source.html  SplineOperator_8h_source.html  Spline_8h_source.html  Support_8h_source.html  TODO.txt  _formulas.tex  _formulas_dark.tex  annotated.html  classbspline_1_1BSplineGenerator-members.html  classbspline_1_1BSplineGenerator.html  classbspline_1_1Spline-members.html  classbspline_1_1Spline.html  classbspline_1_1exceptions_1_1BSplineException-members.html  classbspline_1_1exceptions_1_1BSplineException.html  classbspline_1_1exceptions_1_1BSplineException__coll__graph.dot  classbspline_1_1exceptions_1_1BSplineException__coll__graph.md5  classbspline_1_1exceptions_1_1BSplineException__inherit__graph.map  classbspline_1_1exceptions_1_1BSplineException__inherit__graph.md5  classbspline_1_1integration_1_1BilinearForm-members.html  classbspline_1_1integration_1_1BilinearForm.html  classbspline_1_1integration_1_1LinearForm-members.html  classbspline_1_1integration_1_1LinearForm.html  classbspline_1_1operators_1_1Derivative-members.html  classbspline_1_1operators_1_1Derivative.html  classbspline_1_1operators_1_1Derivative__coll__graph.map  classbspline_1_1operators_1_1Derivative__coll__graph.md5  (+138 more)
examples/: CMakeLists.txt  diffusion.cpp  diffusion.h  harmonic-oscillator-spline.cpp  harmonic-oscillator-spline.h  harmonic-oscillator.cpp  harmonic-oscillator.h  hydrogen.cpp  hydrogen.h  main.cpp  misc.h  spline-potential.cpp  spline-potential.h
include/: spline-analytical-integration.h  spline-internal.h  spline-interpolation.h  spline-numerical-integration.h  spline-template.h
include/bspline/: BSplineGenerator.h  Concepts.h  Core.h  Spline.h
include/bspline/exceptions/: BSplineException.h
include/bspline/integration/: BilinearForm.h  LinearForm.h  numerical.h
include/bspline/internal/: misc.h  test_checks.h
include/bspline/interpolation/: interpolation.h
include/bspline/operators/: CompoundOperators.h  Derivative.h  GenericOperators.h  Position.h  ScalarOperators.h  SplineOperator.h
include/bspline/support/: Grid.h  Support.h
include/okruz/bspline/: BSplineGenerator.h  Core.h  Spline.h
include/okruz/bspline/exceptions/: BSplineException.h
include/okruz/bspline/integration/: BilinearForm.h  LinearForm.h  analytical.h  numerical.h
include/okruz/bspline/internal/: misc.h
include/okruz/bspline/interpolation/: interpolation.h
include/okruz/bspline/operators/: CompoundOperator.h  CompoundOperators.h  Derivative.h  GenericOperator.h  GenericOperators.h  Position.h  ScalarOperators.h
include/okruz/bspline/support/: Grid.h  Support.h
readme/: CMakeLists.txt  convergence.md
readme/accuracy/: harmonic-oscillator.cpp  plot.py
readme/generation/: generation.cpp  plot.py
search/: all_0.js  all_1.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+23 more)
tests/: CMakeLists.txt  example-tests.cpp  main.cpp  spline-interpolation-test.cpp  spline-test.cpp  support-test.cpp
tests/bspline/: Spline_test.cpp  spline-test.cpp
tests/bspline/integration/: analytical.h
tests/bspline/interpolation/: interpolation-test.cpp
tests/bspline/operators/: DerivativeAndPosition_test.cpp  Derivative_test.cpp  GenericOperators_test.cpp  ScalarOperators_test.cpp
tests/bspline/support/: Grid_test.cpp  Support_test.cpp  support-test.cpp
tests/okruz/bspline/: spline-test.cpp
tests/okruz/bspline/integration/: analytical.h
tests/okruz/bspline/interpolation/: interpolation-test.cpp
tests/okruz/bspline/support/: support-test.cpp
